@@ -232,7 +232,7 @@ ACCESS_LEVEL_SPY_MSG 0
 
 # (no need to be a spectator), you will also see the /msg messages.
 
-# Another change when compiling aith armathication is that the old
+# Another change when compiling with armathication is that the old
 # setting TEAM_ALLOW_SHUFFLE_UP is replaced by an access level
 # that's required to shuffle up. This defaults to team members.
 
@@ -247,13 +247,16 @@ ACCESS_LEVEL_SHUFFLE_UP 8
 
 # That command itself is by default restricted to be used by
 # the owner, because it is the master key to all other commands.
-# Sensible commands to unlock for moderator use are:
+
+# Sensible commands to unlock for moderator use are (this is the default):
 
 ACCESS_LEVEL PLAYER_MESSAGE 2
 ACCESS_LEVEL KICK 2
 ACCESS_LEVEL BAN 2
 ACCESS_LEVEL KICK_TO 2
 ACCESS_LEVEL MOVE_TO 2
+ACCESS_LEVEL SUSPEND 2
+ACCESS_LEVEL UNSUSPEND 2
 ACCESS_LEVEL KILL 2
 ACCESS_LEVEL SILENCE 2
 ACCESS_LEVEL VOICE 2
