@@ -6638,7 +6638,10 @@ static void Kill_conf(std::istream &s)
 
     ePlayerNetID * p = ReadPlayer( s );
     if ( p && p->Object() )
+    {
         p->Object()->Kill();
+        sn_ConsoleOut( tOutput( "$player_admin_kill", p->GetColoredName() ) );
+    }
 }
 
 static tConfItemFunc kill_conf("KILL",&Kill_conf);
@@ -6672,7 +6675,7 @@ static void Suspend_conf(std::istream &s )
 
 static void UnSuspend_conf(std::istream &s )
 {
-    Suspend_conf_base( s, 5 );
+    Suspend_conf_base( s, 0 );
 }
 
 static tConfItemFunc suspend_conf("SUSPEND",&Suspend_conf);
@@ -7332,12 +7335,12 @@ void ePlayerNetID::Suspend( int rounds )
 
     if ( suspended_ == 0 )
     {
-        sn_ConsoleOut( tOutput( "$player_no_longer_suspended", GetName() ) );
+        sn_ConsoleOut( tOutput( "$player_no_longer_suspended", GetColoredName() ) );
         FindDefaultTeam();
     }
     else
     {
-        sn_ConsoleOut( tOutput( "$player_suspended", GetName(), suspended_ ) );
+        sn_ConsoleOut( tOutput( "$player_suspended", GetColoredName(), suspended_ ) );
         SetTeam( NULL );
     }
 }
